teacher dynamic data

--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -464,6 +464,9 @@ body.courses__show, body.courses__after_class {
 					text-align:center;
 					float: left;
 				}
+				span.title {
+					padding-left: 20px;
+				}
 				li {
 					height: 46px;
 					line-height: 46px;
