--- a/app/views/course_info/_course_setup.html.erb
+++ b/app/views/course_info/_course_setup.html.erb
@@ -1,8 +1,8 @@
 <a href="javascript:void(0)" class="btn btn-primary by-btn-bg">课程设计理念</a>
 <h5> </h5>
-<dl>
-  <dt>
-    1．课程设计的理念
-  </dt>
-  <dd>hello</dd>
-</dl>
+<div class="container-fluid">
+	<dl>
+		<dd>1.课程设计的理念</dd>
+		<dd>合理咯</dd>
+	</dl>
+</div>
