--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -2,6 +2,7 @@
   <%= javascript_tag do %>
     user_login = <%= current_user.present? %>
     course_praise_path = "<%= course_praise_courses_path%>"
+    course_collect_path = "<%= course_collect_courses_path%>"
   <% end %>
   <%= javascript_include_tag "_course_show" %>
 <%end%>
