--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -1240,7 +1240,7 @@ body.sub_courses__show  {
 						overflow: hidden;
 					}
 					textarea {
-						color: #a9a9a9;
+						//color: #a9a9a9;
 						padding: 5px;
 						margin-bottom: 10px;
 						border: solid 1px #d3dce0;
@@ -1250,6 +1250,10 @@ body.sub_courses__show  {
 					li {
 						.comment_date {
 							color: #969b9e;
+						}
+						img {
+								max-height: 60px;
+								max-width: 60px;
 						}
 					}
 				}
