--- a/app/views/sub_courses/show.html.erb
+++ b/app/views/sub_courses/show.html.erb
@@ -25,35 +25,21 @@
 		</div>
 		<div class="comments-content">
 			<div class="links">
-				<a href="#" class="btn btn-primary">评论</a>
-				<a href="#" class="btn btn-default">回答</a>
+				<a href="#" class="btn btn-primary btn-lg">评论</a>
+				<a href="#" class="btn btn-default btn-lg">问答</a>
 			</div>
 			<div class="links-content">
 				<div class="comment-input">
-					<textarea class="comment_text" name="textfield" autofocus=false type="text" rows="5" cols="118" value="扯淡、吐槽、表扬、鼓励......想说啥就说啥！" onfocus='this.value=""' onblur='this.value="扯淡、吐槽、表扬、鼓励......想说啥就说啥！"'/></textarea>
-					<a href="#" class="btn btn-success pull-right">发表评论</a>
-				</div>
-				<ul class="comment-list">
-					<% 6.times do%>
-						<li class="media">
-							<hr>
-							<div class="media-left">
-								<a href="#">
-									<%= image_tag "user-picture1.jpg"%>
-								</a>
-							</div>
-							<div class="media-body">
-								<h5 class="media-heading">闲逛的蚂蚁</h5>
-								<p>谢谢郭大侠的无私奉献。</p>
-								<p class="comment_date">
-									<span>时间：2015-5-23  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp源自：3-10 总结</span>
-									<button class="btn btn-primary btn-xs comment_reply" type="button">回复</button>
-									<button type="button" class="btn pull-right"><span class=" glyphicon glyphicon-thumbs-up" aria-hidden="true">4</span> </button>
-								</p>
-							</div>
-						</li>
+					<%= form_tag sub_courses_comment_create_list_path, method: :post, remote: true do %>
+						<%= text_area_tag "comment", "", class: "comment_text", rows: 5, 
+							cols: 118, placeholder: "扯淡、吐槽、表扬、鼓励......想说啥就说啥！" %>
+							<%= hidden_field_tag "number", @sub_course.number %>
+						<%= submit_tag "发表评论", class: "btn btn-success pull-right", onclick: "if($('#comment').val() == ''){return false;};" %>
 					<% end %>
-				</ul>
+				</div>
+				<div id="commentOrAnswer">
+					<%= render :partial => "comment_show" , locals: {comments: @comments }%>
+				</div>
 			</div>
 		</div>
 	</div>
