--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,27 +12,27 @@
   	<!--<span class="pull-right common"><%= link_to "更多", "#", class: "more" %></span>-->
   </section>
   <section class="department-tabs">
-    <span><%= link_to "全部", "#", class: "first-tab factive"%></span>
+    <span><%= link_to "全部", root_path, class: "first-tab factive"%></span>
     <% @academies.each_with_index do |academy, index| %>
-      <span><%= link_to academy.name, "javascript:void(0)", class: 'common-tab', style: "left: #{index * 118 + 68 }px" %></span>
+      <span class="tab-select-span"><%= link_to academy.name, select_courses_home_path(academy_id: academy.id), remote: true, class: 'common-tab', style: "left: #{index * 118 + 68 }px" %></span>
     <% end %>
   </section>
   <div class="vedio-course-content wrapper">
     <% @courses.each do |course|%>
       <div class='single-vedio-content'>
-    	  <div class="vedio-content">
+        <div class="vedio-content">
           <div class="image-wrapper">
             <%= link_to image_tag(course.image.avatar.url(:c_350_230)), show_courses_path(course.number), class: 'img' if course.image%>
           </div>
-    	    <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
-    	    <p class="description">
+          <p class="title"><%= link_to course.name, show_courses_path(course.number) %></p>
+          <p class="description">
             <span class="pull-left section"><%= link_to course.description.to_s[0..10], show_courses_path(course.number) %></span>
             <span class="pull-right">
               <span class="glyphicon glyphicon-star"></span>
               <%= course.get_likes(vote_scope: "collect").size %>人收藏
             </span>
           </p>
-    	  </div>
+        </div>
       </div>
     <%end%>
   </div>
@@ -69,3 +69,15 @@
     <a class="nav next" href="#"></a>
   </div>
 </div>
+<script type="text/javascript">
+  $(function(){
+    $(".department-tabs span.tab-select-span").each(function(){
+      var _this = $(this);
+      _this.click(function(){
+        _this.find("a").addClass("active");
+        _this.siblings().find("a").removeClass("active");
+        $(".department-tabs span:eq(0) a").removeClass("factive");
+      })
+    });
+  });
+</script>
