--- a/app/views/sub_courses/comment_create_list.js.erb
+++ b/app/views/sub_courses/comment_create_list.js.erb
@@ -1,3 +1,3 @@
-$("#comment").val("");
-$("#commentOrAnswer").html('<%= escape_javascript( render :partial => "comment_show",
+//一览显示变换
+$("#commentContent").html('<%= escape_javascript( render :partial => "comment_show",
   :locals => {:comments => @comments}) %>');
