--- a/app/assets/stylesheets/application/custom.scss
+++ b/app/assets/stylesheets/application/custom.scss
@@ -1251,10 +1251,28 @@ body.sub_courses__show  {
 						.comment_date {
 							color: #969b9e;
 						}
-						img {
-								max-height: 60px;
-								max-width: 60px;
+						img.img-circle {
+							max-height: 30px;
+							max-width: 30px;
 						}
+					}
+				}
+
+				.child-comment-list {
+					p {
+						padding-left: 70px;
+					}
+					li {
+						padding: 5px;
+					}
+				}
+
+				//回复表单
+				.reply-comment-form {
+					padding-top: 20px;
+					display: block;
+					.btn-success {
+						margin-top: 20px;
 					}
 				}
 			}
