--- a/app/views/course_info/_course_setup.html.erb
+++ b/app/views/course_info/_course_setup.html.erb
@@ -1,8 +1,32 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg">课程设计理念</a>
-<h5> </h5>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>课程设置</strong></a>
+<a href="javascript:void(0)" class="btn"><strong>课程性质与作用</strong></a>
+<br><br>
 <div class="container-fluid">
 	<dl>
-		<dd>1.课程设计的理念</dd>
-		<dd>合理咯</dd>
+		<dt>1.课程设计的理念</dt>
+		<dd>1.1教学过程与企业用人要求对接，课程内容与职业标准对接</dd>
+		<dd>学习过程与典型的工作过程的对接</dd>
+		<dd>教师与开发人员的对接</dd>
+		<dd>训练项目与实际项目的对接</dd>
+		<dd>工作能力与企业用人要求的对接</dd>
+		<br>
+		<dt>1．2 基于岗位需求的人才培养</dt>
+		<dd>根据不同的岗位需求来培养学生，在课程的学习与实践过程中注重培养学生的职业岗位素质与能力。</dd>
+		<br>
+		<dt>2．课程设计的思路</dt>
+		<dd>本课程一直由学校专任教师和企业资深工程师合作授课。专任教师具有丰富的课堂教学经验，擅长于知识的讲解与传授，企业工程师非常了解市场对人才的需求，有丰富的实际工作经验，能够营造真实的企业工作环境，带领学生做真实的企业项目开发，更好的培养学生的职业能力。</dd>
+		<dt>2.1为学生提供企业环境和开发项目</dt>
+		<dd>本课程的建设与改革全过程与上海子杰信息技术有限公司合作。上海子杰信息技术有限公司的工程师刘雄华长期工作于软件开发第一线，具有丰富的软件开发经验，同时带领他的团队致力于软件工程师的培训工作。<br><br>
+		本课程充分利用校园CRP教学管理系统，掌握学生的学习动态，实施“因材施教”，学习能力强的团队可以高速，高质量的完成任务，能力略差的团队则可以在平台的帮助下进入下一阶段的学习。</dd>
+		<br>
+		<dt>2.2引入项目教学法，以任务驱动为载体做教学设计</dt>
+		<dd>将企业提供的真实项目适当简化，序化，划分不同的学习任务，便于学生学习的循序渐进，螺旋式上升。该课程的课程设计着眼于传授职业能力，包括以下方面：</dd>
+		<dd>（1）专业能力</dd>
+		<dd>使用真实的企业项目，分解项目，细化任务，培养学生iOS图形界面开发的专业能力。</dd>
+		<dd>（2）社会能力</dd>
+		<dd>在企业工作流程中能够自我工作，并能配合同伴进行有组织的工作，良好的团队合作意识。</dd>
+		<dd>（3）方法能力</dd>
+		<dd>学会评价产品，有将产品进一步优化的意识。德国制造之所以享誉全球，在于在学生阶段就开始培养优化产品的意识，工作不敷衍了事，追求更好。这是我们需要更加重视的职业能力</dd>
+		<dd>每个学习任务经历特定的过程，然后进入下一个学习任务，知识螺旋式上升。学生根据自己的能力制定具体工作计划，让优秀学生“冒尖”，同时不会打击能力差的学生的积极性，不会出现部分学生因为跟不上而放弃学习的情景。</dd>
 	</dl>
 </div>
