--- a/app/views/course_info/_course_data.html.erb
+++ b/app/views/course_info/_course_data.html.erb
@@ -1,7 +1,7 @@
-<a href="javascript:void(0)" class="btn btn-primary by-btn-bg">课程设计理念</a>
-<h5> </h5>
+<a href="javascript:void(0)" class="btn btn-primary by-btn-bg"><strong>课程设计理念</strong></a>
+<br><br>
 <ul class="container-fluid">
-  <div class="col-sm-12"><p class="col-sm-12">教学录像</p></div>
+  <div class="col-sm-12"><dd class="col-sm-12">教学录像</dd></div>
   <% (0..2).each do |index|%>
   <li class="col-sm-12">
     <a href= "#" class="col-sm-10">ios图形界面的应用</a>
@@ -9,9 +9,9 @@
   </li>
   <% end %>
 </ul>
-<h5> </h5>
+<br><br>
 <ul class="container-fluid">
-  <div class="col-sm-12"><p class="col-sm-12">申报表</p></div>
+  <div class="col-sm-12"><dd class="col-sm-12">申报表</dd></div>
   <li class="col-sm-12">
     <a pef= "#" class="col-sm-10">ios图形界面开发精品课程申报表</a>
     <a href class="col-sm-2"><%= image_tag "read_icon.png"%>&nbsp;&nbsp;阅读</a>
