--- a/app/views/user/my_answers.html.erb
+++ b/app/views/user/my_answers.html.erb
@@ -32,17 +32,26 @@
               </div>
               <div class="col-sm-9">
                 <div>奋斗在路上 <span class="grey-font">回答</span></div>
-                <p><%= comment.body%></p><br>
+                <p>
+                  <%= link_to comment.body,show_sub_courses_courses_path(comment.try(:commentable).try(:number))%>
+                </p>
+                <% if comment.parent.present? %>
+                    <p><span class="text-muted">[问题]</span>
+                    <span><%= comment.parent.try(:usertable).try(:show_name) %>:<span>
+                    <span class="text-muted">
+                    <%= link_to comment.parent.body,show_sub_courses_courses_path(comment.try(:commentable).try(:number))%>
+                    </span></p>
+                 <% end %>
                 <div class="grey-font">时间：<%= comment.created_at.try(:strftime,'%Y-%m-%d %H:%M:%S') %></div>
               </div>
               <div class="col-sm-2">
                  <table class="table no-border text-muted">
                   <tr align="center">
-                    <td class="<%= comment.has_children? ? "text-success" : "text-muted"%>"><%= comment.children.size %></td>
+                    <td class="<%= comment.parent.present? ? "text-success" : "text-muted"%>"><%= comment.parent.children.size %></td>
                     <td class="left-border">0</td>
                   </tr>
                   <tr align="center">
-                    <td class="<%= comment.has_children? ? "text-success" : "text-muted"%>">回答</td>
+                    <td class="<%= comment.parent.present? ? "text-success" : "text-muted"%>">回答</td>
                     <td class="left-border">浏览</td>
                   </tr>
                 </table>
